--- a/app/src/main/res/layout/diary_list.xml
+++ b/app/src/main/res/layout/diary_list.xml
@@ -8,8 +8,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
+                android:layout_width="100dp"
+                android:layout_height="100dp" app:srcCompat="@mipmap/ic_launcher_round"
                 android:id="@+id/list_image" android:layout_weight="1"/>
         <LinearLayout
                 android:orientation="vertical"
