--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -14,12 +14,14 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="20sp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:id="@+id/edit_day_text"/>
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:background="@color/lightGray"
-            android:id="@+id/edit_image"/>
+            android:id="@+id/edit_image" app:srcCompat="@android:drawable/ic_menu_gallery"/>
     <EditText
             android:hint="タイトル"
             android:layout_width="match_parent"
