--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -21,14 +21,14 @@
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:background="@color/lightGray"
+            android:background="@color/transparent"
             android:id="@+id/preview_image"/>
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="33dp"
             android:layout_marginLeft="33dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:textSize="14sp"
             android:background="@drawable/title_flame"
             android:id="@+id/preview_title_edit"/>
