--- a/app/src/main/res/menu/menu_preview.xml
+++ b/app/src/main/res/menu/menu_preview.xml
@@ -2,6 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
             android:id="@+id/menu_preview_edit"
-            android:title="編集"
+            android:title="編集する"
             app:showAsAction="ifRoom" />
 </menu>
