--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,27 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <TextView
+                android:text=""
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:background="@color/colorAccent"
+                android:textColor="@color/white"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:gravity="center_vertical"
+                android:textSize="16sp"
+                android:id="@+id/main_user_name_text"/>
+        <ListView
+                android:id="@+id/main_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+        </ListView>
+    </LinearLayout>
     <TextView
             android:text="日記をつけましょう。\n日記はボタンから作成できます。"
             android:layout_width="wrap_content"
@@ -15,13 +36,6 @@
             android:textSize="18sp"
             android:visibility="invisible"
             android:id="@+id/main_message_text"/>
-
-
-    <ListView
-            android:id="@+id/main_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-    </ListView>
 
 
     <android.support.design.widget.FloatingActionButton
